Bug 629982: Attempt to fix crashes due to too deep DOM trees by making GetBaseURI non-recursive. r=jst a=blocker